hphp/hack/test/typecheck/tconst/tconst_with_static.php.exp
File "tconst_with_static.php", line 16, characters 12-13:
Invalid return type (Typing[4110])
File "tconst_with_static.php", line 9, characters 21-22:
This is an int
File "tconst_with_static.php", line 16, characters 12-13:
It is incompatible with a string
